hard-gists/777789/run.log
=== Docker Run Log for 777789 ===
Started at: Mi 29. Okt 17:17:25 CET 2025

[2025-10-29 17:17:26] START: Running container for 777789
[2025-10-29 17:17:26] SUCCESS: Container c529e839cef51a13d6127313177d2f88e67a933da3e1cda60bea63757e3be330 started for 777789
=== Container logs for 777789 ===
  File "/snippet.py", line 29
    print url
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 777789 ===
[2025-10-29 17:17:28] INFO: Container c529e839cef51a13d6127313177d2f88e67a933da3e1cda60bea63757e3be330 has stopped
